<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.infinispan</groupId>
        <artifactId>infinispan-quarkus-server-parent</artifactId>
        <version>15.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>infinispan-quarkus-server</artifactId>
    <name>Infinispan Quarkus :: Server Runtime</name>

    <properties>
        <maven.compiler.release/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-core</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.wildfly.security</groupId>
                    <artifactId>wildfly-elytron-ssl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.wildfly.security</groupId>
                    <artifactId>wildfly-elytron-x500-cert</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-quarkus-embedded</artifactId>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-netty</artifactId>
        </dependency>

        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-server-runtime</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-directory-provider</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-lucene-directory</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>hibernate-search-serialization-avro</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-lucene-directory</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-jboss-marshalling</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>hibernate-search-engine</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cachestore-rocksdb</artifactId>
                </exclusion>
                <!-- This cannot be excluded as org.infinispan.query.impl.InfinispanQueryStatisticsInfo implements it
                     and is part of the query module.
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-search-engine</artifactId>
                </exclusion>
                -->
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-search-serialization-avro</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cloudevents-integration</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cli-client</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-server-runtime</artifactId>
            <classifier>loader</classifier>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-directory-provider</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-lucene-directory</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>hibernate-search-serialization-avro</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-lucene-directory</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-jboss-marshalling</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>hibernate-search-engine</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cachestore-rocksdb</artifactId>
                </exclusion>
                <!-- This cannot be excluded as org.infinispan.query.impl.InfinispanQueryStatisticsInfo implements it
                     and is part of the query module.
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-search-engine</artifactId>
                </exclusion>
                -->
                <exclusion>
                    <groupId>org.hibernate</groupId>
                    <artifactId>hibernate-search-serialization-avro</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cloudevents-integration</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.infinispan</groupId>
                    <artifactId>infinispan-cli-client</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>io.lettuce</groupId>
            <artifactId>lettuce-core</artifactId>
            <version>${version.io.lettuce}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-common</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.netty</groupId>
                    <artifactId>netty-transport</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-anchored-keys</artifactId>
        </dependency>

        <dependency>
            <groupId>org.infinispan</groupId>
            <artifactId>infinispan-clustered-lock</artifactId>
        </dependency>

        <dependency>
            <groupId>org.graalvm.sdk</groupId>
            <artifactId>graal-sdk</artifactId>
        </dependency>

        <dependency>
            <groupId>org.wildfly.security</groupId>
            <artifactId>wildfly-elytron-realm-token</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.json</groupId>
            <artifactId>jakarta.json-api</artifactId>
            <version>${version.jakarta.json}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.quarkus</groupId>
                <artifactId>quarkus-extension-maven-plugin</artifactId>
                <version>${version.quarkus}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>extension-descriptor</goal>
                        </goals>
                        <phase>compile</phase>
                        <configuration>
                            <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}
                            </deployment>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.quarkus</groupId>
                            <artifactId>quarkus-extension-processor</artifactId>
                            <version>${version.quarkus}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.naming.dns</arg>
                        <arg>--add-exports</arg>
                        <arg>java.naming/com.sun.jndi.ldap=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration combine.children="override" combine.self="override">
                    <archive>
                        <manifest>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Codename>${infinispan.codename}</Implementation-Codename>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <skip>${maven.javadoc.skip}</skip>
                    <detectOfflineLinks>false</detectOfflineLinks>
                    <release>17</release> <!-- because we are setting it to the empty string above -->
                    <sourceFileExcludes>
                        <sourceFileExclude>**/SubstituteDnsLookup.java</sourceFileExclude>
                    </sourceFileExcludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
